Fixes tap highlights on mobile devices
From the hierarchy tree, the breadcrumbs and all the links without borders.

Release note: None

--- a/src/main.css
+++ b/src/main.css
@@ -115,6 +115,8 @@ nav .active {
 
 div{
     text-align: justify;
+    -ms-scrollbar-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 table {
